# naml-project

./: .gitignore  README.md  config.yaml  data_analysis.py  data_analysis_original.py  movie_rec_sys.py  movie_rec_sys_original.py  pyproject.toml
Data/: groundtruth.json  movie_credits.json  movie_tmdb_attributes.json  tmdb_by_title.json  tmdb_imdb_association.json  tmdb_movies.json  tmdb_movies_MovieID.json
docs/: Project.tex  code_style.tex
docs/Configuration_Files/: PoliMi3i_thesis.cls
src/: analyzer.py  cleaner.py  config.py  evaluation.py  loader.py  tmdb.py  visualization.py
src/recommenders/: base.py  baseline.py  collaborative.py  content_based.py  hybrid.py
